--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,13 +11,15 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# Configuración SQL Server
+# Configuración SQL Server (MSSQL)
+# Para instancia nombrada con puerto: SERVIDOR\INSTANCIA,puerto
 DB_CONNECTION=sqlsrv
 DB_HOST=192.168.41.2
-DB_PORT=1433
+DB_PORT=1433    
 DB_DATABASE=Lidr
-DB_USERNAME=tu_usuario
-DB_PASSWORD=tu_password
+DB_USERNAME=Axoft
+DB_PASSWORD=Axoft
+DB_TRUST_SERVER_CERTIFICATE=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
